--- a/css/style.scss
+++ b/css/style.scss
@@ -159,7 +159,8 @@ $borc: #e6e6eb;
                             }
                         }
                         .summary {
-                            h3 {
+                            margin-left:5px;
+                            > h3 {
                                 white-space: nowrap;
                                 font-size: 4.7vw;
                                 margin-top: 2vw;
@@ -167,7 +168,7 @@ $borc: #e6e6eb;
                                 width: 70%;
                                 text-transform:uppercase;
                             }
-                            small {
+                           > small {
                                 opacity: 0.7;
                                 font-size: 3.1vw;
                                 display: block;
@@ -246,24 +247,26 @@ $borc: #e6e6eb;
            
         }
         .listbox {
-            overflow-y:auto;
+            overflow:hidden;
             width:100%;
-            height:30vh;
+           
             .items {
                 border-radius: 2px;
-                padding: 10px 0;
-                font-size: 14px;
-                position: relative;
-               display:flex;
-               flex-direction:column;
-                height:200px;
-                transition:transform 3s ease-in-out;
-               white-space:nowrap;
-               transition:all .2s;
-               transform:scale(0.98);
-               will-change:transform;
-               user-select:none;
-               cursor:move;
+            padding: 10px 0;
+            font-size: 14px;
+            position: relative;
+           display:flex;
+            z-index:100;
+            width:100%;
+           
+            transition:transform 3s ease-in-out;
+           white-space:nowrap;
+           transition:all .2s;
+           transform:scale(0.98);
+           will-change:transform;
+           user-select:none;
+           cursor:move;
+            margin-left: 20px;
                 
               
                 &.active{
@@ -272,22 +275,23 @@ $borc: #e6e6eb;
                     background:rgba(255,255,255,0.3);
                 }
                
-               .item {
-                   border: 1px solid rgba(34, 34, 40, 0.15);
+                .item {
+                  
                     background:#fff;
-                    padding: 2px 3px;
+                    margin-right: 20px;
+                    padding: 3px 5px;
                     border: 1px solid $borc;
                     display:flex;
                     flex-direction: column;
                   .con{
-                    width:100%;
+                   width:330px;
                     .leftsec {
                         display: inline-block;
-                       flex:2;
+                        flex:2;
                         font-size: 0;
-                           
+                       
                         .thumb {
-                            width:100%; height:100px;
+                            width:100%; height:100%;
                            > a{
                                width:100%; height:100%;
                             }
@@ -299,17 +303,26 @@ $borc: #e6e6eb;
                           }
                         }
                     .rightsec {
-                        flex:5;
+                        flex:3;
+                        height:110px;
                         display: inline-block;
                         vertical-align: top;
                         box-sizing: border-box;
-                       margin-left:50px;
+                       margin-left:3px;
                         font-size: 0;
                          > div{
                             margin-bottom: 6px;
                             > h4 {
                                 font-size: 16px;
                                 text-transform:uppercase;
+                               
+                            }
+                            #idx{
+                                text-align:center;
+                                vertical-align: center;
+                                width:20px; height:20px;
+                                border-radius:100%;
+                                border: 2px solid #4aa0ec;
                             }
                             > span {
                                display:none;
@@ -327,14 +340,15 @@ $borc: #e6e6eb;
                             color: #9999a0;
                             white-space:pre-wrap;
                         }
-                     }
-                   }
+                    }
+                 
                 }
               }
             }
          }
          .morebox {
              border-top:1px solid $borc;
+             margin-bottom:9vh;
             a {
                 display: inline-block;
                 padding-right: 22px;
@@ -359,21 +373,24 @@ $borc: #e6e6eb;
     }
 
     
-    
+}
   
 
 .footLink {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    z-index: 100;
-    padding: 1% 0;
-    width: 100%;
-    height: auto;
-
-    text-align: center;
-    border-top: 1px solid $borc;
-    background: #fff;
+    opacity:0;
+   
+    &.active{
+        opacity:1;
+        position:fixed;
+        bottom:0;left:0;
+        z-index: 100;
+        padding: 1% 0;
+        width: 100%;
+        height: auto;
+        text-align: center;
+        border-top: 1px solid $borc;
+        background: #fff;
+    }
     a {
         display: inline-block;
         font-size: 10px;
@@ -422,26 +439,5 @@ $borc: #e6e6eb;
             left: 50%;
             margin-left: -16px;
         }
-    }
-}
-.footLink-back {
-    position: relative;
-    opacity: 0;
-    padding: 1% 0;
-    width: 100%;
-    height: auto;
-
-    text-align: center;
-    border-top: 1px solid $borc;
-    background: #fff;
-    a {
-        display: inline-block;
-        font-size: 10px;
-        box-sizing: border-box;
-        width: 33%;
-        height: 100%;
-        padding-top: 36px;
-        vertical-align: top;
-        position: relative;
     }
 }
