--- a/css/style.css
+++ b/css/style.css
@@ -269,20 +269,10 @@
   height: auto;
 }
 
-.background .nearbox .mapbox .map > p {
-  margin-top: 3px;
-  color: #9999a0;
-  font-size: 10px;
-}
-
-.background .nearbox .mapbox .map > p a {
-  font-size: 10px;
-  color: #9999a0;
-}
-
 .background .nearbox .listbox {
   overflow: hidden;
   width: 100%;
+  height: 20vh;
 }
 
 .background .nearbox .listbox .items {
@@ -388,8 +378,8 @@
 .background .nearbox .listbox .items .item .con .rightsec > div #idx {
   text-align: center;
   vertical-align: center;
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   border-radius: 100%;
   border: 2px solid #4aa0ec;
 }
@@ -407,6 +397,17 @@
   font-size: 13px;
   color: #9999a0;
   white-space: pre-wrap;
+}
+
+.background .nearbox .mapInfo > p {
+  margin-top: 3px;
+  color: #9999a0;
+  font-size: 10px;
+}
+
+.background .nearbox .mapInfo > p a {
+  font-size: 10px;
+  color: #9999a0;
 }
 
 .background .nearbox .morebox {
