--- a/css/style.scss
+++ b/css/style.scss
@@ -234,22 +234,15 @@ $borc: #e6e6eb;
             .map {
                 height: auto;
               
-               > p{
-                margin-top:3px;
-                color: #9999a0;
-                font-size:10px;
-                a{
-                    font-size:10px;
-                    color: #9999a0;
-                }
                }
             }
            
-        }
+       
         .listbox {
             overflow:hidden;
             width:100%;
-           
+           height:20vh;
+         
             .items {
                 border-radius: 2px;
             padding: 10px 0;
@@ -346,6 +339,17 @@ $borc: #e6e6eb;
               }
             }
          }
+         .mapInfo{
+            > p{
+                margin-top:3px;
+                color: #9999a0;
+                font-size:10px;
+                a{
+                    font-size:10px;
+                    color: #9999a0;
+                }
+         }
+        }
          .morebox {
              border-top:1px solid $borc;
              margin-bottom:9vh;
