--- a/css/style.scss
+++ b/css/style.scss
@@ -388,9 +388,10 @@ $borc: #e6e6eb;
         position:fixed;
         bottom:0;left:0;
         z-index: 100;
-        padding: 1% 0;
+        padding: 1.7% 0;
         width: 100%;
         height: auto;
+        display:flex;
         text-align: center;
         border-top: 1px solid $borc;
         background: #fff;
