--- a/css/style.scss
+++ b/css/style.scss
@@ -44,8 +44,8 @@ $borc: #e6e6eb;
            font-size: 10px;
            text-align: center;
            img{
-            width: 64px;
-            height: 64px;
+            width:50%;
+            height: 50%;
                 }  
        }
        
